--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,111 +1,135 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-        <link rel="stylesheet"  href="../css/leftsidebar.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <style>
-            .main{
-                width: 100%;
-                height: 100%;
-                background-color: grey;
-            }
-            .main-map{
-                display: block;
-                margin-right: 50px;
-                margin-top: 65px;
-                width:32%;
-                height: 80vh ;
-                float: right;
-                background-color: #b6cefc;
-            }
-            #main-map-item1{
-                display: flex;
-                width:32%;
-                margin-right: 5px;
-                height: auto ;
-                float: left;
-                background-color: #e88bff;
-            }
-            #main-map-item2{
-                display: flex;
-                width:32%;
-                margin-right: 5px;
-                height: auto ;
-                float: left;
-                background-color: #e88bff;
-            }
-            #main-map-item3{
-                display: flex;
-                width:33%;
-                height: auto ;
-                float: left;
-                background-color: #e88bff;
-            }
-            .main-search{
-                display: block;
-                margin-right: 50px;
-                margin-top: 65px;
-                width: 30%;
-                height: 80vh;
-                background-color: crimson;
-                float: right;
-            }
-            /*mmm로고*/
-            .siteName {
-                display: flex;
-                width: 200px;
-                height: 50px;
-                position: fixed;
-                top: 10px;
-                left: 50%;
-                transform: translateX(-50%);
-                background-color: aqua;
-                justify-content: center;
-                align-items: center;
-            }
-        </style>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    </head>
-    <body>
-    <div class="siteName">
-        <h2>MMM</h2>
-    </div>
-    <div class="main">
-        <!--사이드바-->
-        <div class="menu">
-            <label for="expand-menu"><div></div></label>
-            <input type="checkbox" id="expand-menu" name="expand-menu">
-            <ul>
-                <li><a href="#" class="item"><div>인기키워드</div></a></li>
-                <li><a href="#" class="item"><div>인기 Top 코스</div></a></li>
-                <li><a href="#" class="item"><div>Best맛집</div></a></li>
-                <li><a href="#" class="item"><div>커뮤니티</div></a></li>
-                <li><a href="#" class="item"><div>후기글 모음</div></a></li>
-                <li><a href="#" class="item"><div>FAQ</div></a></li>
-                <li><div class="menu-title">마이페이지</div>
-                    <ul>
-                        <li><a href="#" class="item2"><div>개인정보 수정</div></a></li>
-                        <li><a href="#" class="item2"><div>찜코스</div></a></li>
-                        <li><a href="#" class="item2"><div>커뮤니티</div></a></li>
-                    </ul>
-                </li>
-                <li><div class="menu-title">인스타추천</div></li>
-                <li><div class="instaImg"><img src="../imgs/instagram.png " width="30" height="30"></div></li>
-            </ul>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet"  href="../css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 부트스트랩 CDN 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+    </style>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <!-- 로고 이미지 추가 -->
+            <div class="logo">
+                <img src="../imgs/mmm_logo2.png" alt="MMM">
+            </div>
         </div>
-        <div class="main-search">
+    </div>
+    <!-- 사이드바 -->
+    <div id="sidebar" class="col-lg-5 sidebar">
+        <span id="login"><a href="#" class="login">로그인</a></span>
+        <span id="join"><a href="#" class="join">회원가입</a></span>
+        <ul id="ul1">
+            <li><a href="#" class="item"><div>인기키워드</div></a></li>
+            <li><a href="#" class="item"><div>인기 Top 코스</div></a></li>
+            <li><a href="#" class="item"><div>Best맛집</div></a></li>
+            <li><a href="#" class="item"><div>커뮤니티</div></a></li>
+            <li><a href="#" class="item"><div>후기글 모음</div></a></li>
+            <li><a href="#" class="item"><div>FAQ</div></a></li>
+            <hr class="sidebar-hr">
+            <li><div class="sidebar-mypage">마이페이지</div>
+                <ul id="ul2">
+                    <li><a href="#" class="item2"><div class="mypageItem">개인정보 수정</div></a></li>
+                    <li><a href="#" class="item2"><div class="mypageItem">찜코스</div></a></li>
+                    <li><a href="#" class="item2"><div class="mypageItem">커뮤니티</div></a></li>
+                </ul>
+            </li>
+            <hr class="sidebar-hr">
+            <li><div class="sidebar-insta">인스타추천</div></li>
+            <li><div class="instaImg"><img src="../imgs/instagram.png " width="30" height="30"></div></li>
+        </ul>
+    </div>
+    <div class="col-lg-12 content">
+        <!-- 지도 -->
+        <div id="map-container">
+            <div class="search-container">
+                <input type="text" id="search-bar" placeholder="장소를 검색하세요">
+                &nbsp&nbsp&nbsp&nbsp&nbsp
+                <button type="submit">검색</button>
+            </div>
+            <div id="map">지도</div>
         </div>
 
-        <div class="main-map">
-            <div class="main-map-items">
-                <div id="main-map-item1">구까지 입력</div>
-                <div id="main-map-item2">검색</div>
-                <div id="main-map-item3">구군</div>
+        <!-- 선택 폼 -->
+        <form id="select">
+            <br>
+            <label>선택된 지역:</label>
+            <span id="selected-location-text"> </span><br><br>
+
+            <label for="mbti">MBTI:</label>
+            <select id="mbti" name="mbti">
+                <option value="" disabled selected>선택해주세요</option>
+                <option value="ISTJ">ISTJ</option>
+                <option value="ISFJ">ISFJ</option>
+                <option value="INFJ">INFJ</option>
+                <option value="INTJ">INTJ</option>
+                <option value="ISTP">ISTP</option>
+                <option value="ISFP">ISFP</option>
+                <option value="INFP">INFP</option>
+                <option value="INTP">INTP</option>
+                <option value="ESTP">ESTP</option>
+                <option value="ESFP">ESFP</option>
+                <option value="ENFP">ENFP</option>
+                <option value="ENTP">ENTP</option>
+                <option value="ESTJ">ESTJ</option>
+                <option value="ESFJ">ESFJ</option>
+                <option value="ENFJ">ENFJ</option>
+                <option value="ENTJ">ENTJ</option>
+            </select><br><br>
+
+            <label for="age">나이:</label>
+            <input type="number" id="age" name="age" min="1" style="width: 50px;"><br><br>
+
+            <label for="people">인원수:</label>
+            <input type="number" id="people" name="people" min="1" style="width: 50px;"><br><br>
+
+            <!-- 차 유무 선택 -->
+            <label>차 유무:</label><br><br>
+            <input type="radio" id="car_yes" name="car" value="yes">
+            <label for="car_yes">O</label><br>
+            <input type="radio" id="car_no" name="car" value="no" checked>
+            <label for="car_no">X</label><br><br>
+            <div id="courseContainer">
+                <div class="course">
+                    <label for="course1">코스 1:</label>
+                    <select id="course1" name="course1">
+                        <option value="" disabled selected>코스 선택</option>
+                        <option value="식사">식사</option>
+                        <option value="카페">카페</option>
+                        <option value="활동">활동</option>
+                    </select>
+                </div><br>
+                <div class="course">
+                    <label for="course2">코스 2:</label>
+                    <select id="course2" name="course2">
+                        <option value="" disabled selected>코스 선택</option>
+                        <option value="식사">식사</option>
+                        <option value="카페">카페</option>
+                        <option value="활동">활동</option>
+                    </select>
+                </div><br>
+                <div class="course">
+                    <label for="course3">코스 3:</label>
+                    <select id="course3" name="course3">
+                        <option value="" disabled selected>코스 선택</option>
+                        <option value="식사">식사</option>
+                        <option value="카페">카페</option>
+                        <option value="활동">활동</option>
+                    </select>
+                </div><br>
             </div>
-            <div>지도</div>
-        </div>
+
+            <button type="button" id="addCourseBtn">코스 추가</button><br><br>
+            <button type="submit">완료</button>
+        </form>
     </div>
-    </body>
-    </html>
+    <!-- 토글 버튼 -->
+    <div class="menu-toggle">&#9776;</div>
+</div>
+<script src="../js/main.js"></script>
+</body>
+</html>
