--- a/src/html/main.html
+++ b/src/html/main.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 부트스트랩 CDN 추가 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+
     </style>
 </head>
 <body>
@@ -47,13 +49,12 @@
         <!-- 지도 -->
         <div id="map-container">
             <div class="search-container">
-                <input type="text" id="search-bar" placeholder="장소를 검색하세요">
-                &nbsp&nbsp&nbsp&nbsp&nbsp
-                <button type="submit">검색</button>
+                <input type="text" id="keyword" placeholder="장소를 검색하세요">
+                &nbsp&nbsp&nbsp&nbsp
+                <button id="map-search-btn" type="submit">검색</button>
             </div>
-            <div id="map">지도</div>
+            <div class="map" id="map"></div>
         </div>
-
         <!-- 선택 폼 -->
         <form id="select">
             <br>
@@ -124,12 +125,13 @@
             </div>
 
             <button type="button" id="addCourseBtn">코스 추가</button><br><br>
-            <button type="submit">완료</button>
+            <button type="submit" id="select-searchBtn">완료</button>
         </form>
     </div>
     <!-- 토글 버튼 -->
     <div class="menu-toggle">&#9776;</div>
 </div>
-<script src="../js/main.js"></script>
 </body>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9cbf5990fedd620733bc2f5c173f35fb&libraries=services"></script>
+<script src="../js/main.js"></script>
 </html>
