--- a/src/html/myPage.html
+++ b/src/html/myPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet"  href="../css/leftsidebar.css">
+    <link rel="stylesheet"  href="../css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         .main{
