--- a/src/html/write.html
+++ b/src/html/write.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"  href="../css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 부트스트랩 CDN 추가 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>내 글 관리</title>
+    <title>게시글 작성</title>
+    <link rel="stylesheet"  href="../css/main.css">
     <style>
-        /*.container{*/
-        /*    display: flex;*/
-        /*    justify-content: center; !* 수평 중앙 정렬 *!*/
-        /*    align-items: center;*/
-        /*    height: 100vh;*/
-        /*}*/
-        .MyPost {
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
             display: block;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container2 {
+            background-color: white;
+            padding: 40px;
+            margin-left: 400px;
+            margin-right: 100px;
             margin-top: 200px;
-            margin-right:25% ;
-            width: 50%;
-            height: 80vh;
-            float: right;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            max-width: 1000px;
+            width: 100%;
         }
 
-        .deleteButtonContainer {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-direction: row;
-            padding: 10px;
+        h1 {
+            margin-bottom: 30px;
+            font-size: 2em;
         }
 
-        #selectAll, #deletePost {
-            background-color: #bbb4ff;
-            width: auto;
+        .form-group {
+            margin-bottom: 25px;
         }
 
-        #postList {
-            list-style: none;
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-size: 1.2em;
         }
 
-        #MyPost {
-            text-align: center;
-            margin: 15px;
+        input, textarea {
+            width: 100%;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box;
+            font-size: 1.1em;
         }
 
-        .pagination-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
+        input[type="text"] {
+            border: none;
+            border-bottom: 2px solid #ddd;
+            background-color: transparent;
+            outline: none;
+            transition: border-color 0.3s;
         }
 
-        .pagination {
-            display: flex;
-            justify-content: center;
+        input[type="text"]:focus {
+            border-bottom: 2px solid #007BFF;
         }
 
-        .pagination button {
-            margin: 0 5px;
-            padding: 5px 10px;
-            background-color: #bbb4ff;
+        textarea {
+            resize: vertical;
+            border: none;
+            border-bottom: 2px solid #ddd;
+            background-color: transparent;
+            outline: none;
+            transition: border-color 0.3s;
+            height: 200px; /* 높이를 조정하려면 이 값을 변경하세요 */
         }
 
-        .pagination button.active {
-            background-color: #555;
+        textarea:focus {
+            border-bottom: 2px solid #007BFF;
+        }
+
+        button {
+            background-color: #007BFF;
             color: white;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+            width: 100%;
         }
 
-        #prevGroupButton, #nextGroupButton {
-            padding: 5px 0px;
-            background-color: #ffffff;
-            width: 50px;
-            color: black;
+        button:hover {
+            background-color: #0056b3;
         }
 
     </style>
@@ -90,8 +108,8 @@
     </div>
     <!-- 사이드바 -->
     <div id="sidebar" class="col-lg-5 sidebar">
-        <span id="login"><a href="login.html" class="login">로그인</a></span>
-        <span id="join"><a href="join.html" class="join">회원가입</a></span>
+        <span id="login"><a href="#" class="login">로그인</a></span>
+        <span id="join"><a href="#" class="join">회원가입</a></span>
         <ul id="ul1">
             <li><a href="#" class="item"><div>인기키워드</div></a></li>
             <li><a href="#" class="item"><div>인기 Top 코스</div></a></li>
@@ -100,8 +118,7 @@
             <li><a href="#" class="item"><div>후기글 모음</div></a></li>
             <li><a href="#" class="item"><div>FAQ</div></a></li>
             <hr class="sidebar-hr">
-            <li><a href="myPage.html" class="item"><div>마이페이지</div></a></li>
-            <li>
+            <li><div class="sidebar-mypage">마이페이지</div>
                 <ul id="ul2">
                     <li><a href="#" class="item2"><div class="mypageItem">개인정보 수정</div></a></li>
                     <li><a href="#" class="item2"><div class="mypageItem">찜코스</div></a></li>
@@ -113,151 +130,74 @@
             <li><div class="instaImg"><img src="../imgs/instagram.png " width="30" height="30"></div></li>
         </ul>
     </div>
-    <!-- 토글 버튼 -->
-    <div class="menu-toggle">&#9776;</div>
-</div>
-<div class="MyPost">
-    <h2 id="MyPost">내가 쓴 글</h2>
-    <ul id="postList">
-
-    </ul>
-    <div class="pagination-container">
-        <button id="prevGroupButton">&lt;</button>
-        <div class="pagination">
-            <!-- 페이지 버튼들이 여기에 추가될 것입니다. -->
+<div class="container2">
+    <h1>게시글 작성</h1>
+    <form id="postForm">
+        <div class="form-group">
+            <label for="title"></label>
+            <input type="text" id="title" name="title" placeholder="제목을 입력하세요" required>
         </div>
-        <button id="nextGroupButton">&gt;</button>
-    </div>
-    <div class="deleteButtonContainer">
-        <button type="button" id="selectAll">모두 선택</button>
-        <button type="button" id="deletePost">선택된 글 삭제</button>
-    </div>
+        <div class="form-group">
+            <label for="content"></label>
+            <textarea id="content" name="content" rows="10" placeholder="내용을 입력하세요" required></textarea>
+        </div>
+        <button type="submit">작성</button>
+    </form>
 </div>
-<script src="../js/toggle.js"></script>
+
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const selectAllButton = document.getElementById('selectAll'); // 모두 선택 버튼
+    document.getElementById('postForm').addEventListener('submit', function(event) {
+        event.preventDefault();
 
-        // 글 삭제 버튼 클릭 시 선택된 글 삭제
-        const deletePostButton = document.getElementById('deletePost');
-        deletePostButton.addEventListener('click', function () {
-            const postCheckboxes = document.querySelectorAll('.postCheckbox'); // postCheckboxes 변수 정의
-            postCheckboxes.forEach((checkbox, index) => {
-                if (checkbox.checked) {
-                    const listItem = checkbox.parentElement;
-                    listItem.remove();
-                }
-            });
-        });
+        const title = document.getElementById('title').value;
+        const content = document.getElementById('content').value;
+        const author = document.getElementById('author').value;
 
-        // 모두 선택 버튼 클릭 시 모든 체크박스 선택 또는 해제
-        selectAllButton.addEventListener('click', function () {
-            const postCheckboxes = document.querySelectorAll('.postCheckbox');
-            let allChecked = true; // 전체 선택 상태 변수
-            postCheckboxes.forEach((checkbox) => {
-                if (!checkbox.checked) {
-                    allChecked = false;
-                }
-            });
-            // 전체 선택 상태에 따라 토글
-            postCheckboxes.forEach((checkbox) => {
-                checkbox.checked = !allChecked;
-            });
-        });
+        if (title && content && author) {
+            console.log('제목:', title);
+            console.log('내용:', content);
+            console.log('작성자:', author);
+            alert('게시글이 성공적으로 작성되었습니다.');
+
+            // 추가로 서버에 데이터 전송 등 로직을 작성할 수 있습니다.
+        } else {
+            alert('모든 필드를 입력해주세요.');
+        }
     });
 
-</script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const posts = [
-            "글 1", "글 2", "글 3", "글 4", "글 5", "글 6", "글 7", "글 8", "글 9", "글 10",
-            "글 11", "글 12", "글 13", "글 14", "글 15", "글 16", "글 17", "글 18", "글 19", "글 20",
-            "글 1", "글 2", "글 3", "글 4", "글 5", "글 6", "글 7", "글 8", "글 9", "글 10",
-            "글 11", "글 12", "글 13", "글 14", "글 15", "글 16", "글 17", "글 18", "글 19", "글 20",
-            "글 1", "글 2", "글 3", "글 4", "글 5", "글 6", "글 7", "글 8", "글 9", "글 10",
-            "글 11", "글 12", "글 13", "글 14", "글 15", "글 16", "글 17", "글 18", "글 19", "글 20",
-            // 추가적인 글들...
-        ];
+    const titleInput = document.getElementById('title');
+    const contentTextarea = document.getElementById('content');
 
-        const postsPerPage = 10; // 페이지 당 글의 수
-        const pagesPerGroup = 5; // 그룹 당 페이지 수
-        let currentPage = 1; // 현재 페이지
-
-        // 페이지 수 계산
-        const totalPages = Math.ceil(posts.length / postsPerPage);
-        const totalGroups = Math.ceil(totalPages / pagesPerGroup);
-        let currentGroup = Math.ceil(currentPage / pagesPerGroup);
-
-        // 페이지 버튼을 생성하는 함수
-        function createPaginationButtons() {
-            const paginationContainer = document.querySelector('.pagination');
-            paginationContainer.innerHTML = ''; // 버튼들을 초기화
-
-            const startPage = (currentGroup - 1) * pagesPerGroup + 1;
-            const endPage = Math.min(startPage + pagesPerGroup - 1, totalPages);
-
-            for (let i = startPage; i <= endPage; i++) {
-                const button = document.createElement('button');
-                button.textContent = i;
-                if (i === currentPage) {
-                    button.classList.add('active');
-                }
-                button.addEventListener('click', function () {
-                    currentPage = i;
-                    currentGroup = Math.ceil(currentPage / pagesPerGroup);
-                    displayPosts();
-                    createPaginationButtons();
-                });
-                paginationContainer.appendChild(button);
-            }
+    titleInput.addEventListener('focus', function() {
+        if (this.value === '') {
+            this.setAttribute('placeholder', '');
         }
-
-        // 현재 페이지에 해당하는 글을 표시하는 함수
-        function displayPosts() {
-            const postList = document.getElementById('postList');
-            postList.innerHTML = ''; // 글 목록 초기화
-
-            const startIndex = (currentPage - 1) * postsPerPage;
-            const endIndex = startIndex + postsPerPage;
-            const currentPosts = posts.slice(startIndex, endIndex);
-
-            currentPosts.forEach(post => {
-                const listItem = document.createElement('li');
-                listItem.innerHTML = `<input type="checkbox" class="postCheckbox" name="pck"> ${post}`;
-                postList.appendChild(listItem);
-                const hr = document.createElement('hr');
-                postList.appendChild(hr);
-            });
-        }
-
-        // 초기화: 첫 페이지의 글을 표시하고 페이지 버튼 생성
-        displayPosts();
-        createPaginationButtons();
-
-        // 페이지 버튼 그룹 이동 기능 구현
-        const prevGroupButton = document.getElementById('prevGroupButton');
-        const nextGroupButton = document.getElementById('nextGroupButton');
-
-        prevGroupButton.addEventListener('click', function () {
-            if (currentGroup > 1) {
-                currentGroup--;
-                currentPage = (currentGroup - 1) * pagesPerGroup + 1;
-                displayPosts();
-                createPaginationButtons();
-            }
-        });
-
-        nextGroupButton.addEventListener('click', function () {
-            if (currentGroup < totalGroups) {
-                currentGroup++;
-                currentPage = (currentGroup - 1) * pagesPerGroup + 1;
-                displayPosts();
-                createPaginationButtons();
-            }
-        });
     });
 
-</script>
+    titleInput.addEventListener('blur', function() {
+        if (this.value === '') {
+            this.setAttribute('placeholder', '제목을 입력하세요');
+        }
+    });
 
+    contentTextarea.addEventListener('focus', function() {
+        if (this.value === '') {
+            this.setAttribute('placeholder', '');
+        }
+    });
+
+    contentTextarea.addEventListener('blur', function() {
+        if (this.value === '') {
+            this.setAttribute('placeholder', '내용을 입력하세요');
+        }
+    });
+
+    // 초기 상태에서 플레이스홀더가 보이도록 설정
+    window.onload = function() {
+        titleInput.setAttribute('placeholder', '제목을 입력하세요');
+        contentTextarea.setAttribute('placeholder', '내용을 입력하세요');
+    };
+
+</script>
 </body>
 </html>
