--- a/src/html/join.html
+++ b/src/html/join.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button type="button" class="btn btn-primary btn-block">인증번호 발송</button>
+                    <button type="button" class="btn-primary">인증번호 발송</button>
                 </div>
                 <div class="form-group">
                     <label for="verification_code">핸드폰 인증번호</label>
@@ -127,7 +127,7 @@
                     </select>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-block">가입하기</button>
+                <button type="submit" class="btn-primary">가입하기</button>
             </form>
         </div>
     </div>
