--- a/src/html/BestFood.html
+++ b/src/html/BestFood.html
@@ -9,15 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
-        .search-container {
+        .foodSearch-container {
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            width: 100%; /* 너비 100% */
-            justify-content: center; /* 가로 중앙 정렬 */
+            width: 100%;
+            justify-content: center;
         }
 
-        .container2 {
+        .container-Bestfood {
             width: 70%;
             margin: 100px auto;
             padding: 20px;
@@ -36,42 +36,11 @@
             height: 200px;
             object-fit: cover;
         }
-
-        .search-container {
-            display: flex; /* 검색창과 버튼을 가로로 배치 */
-            margin-bottom: 20px;
+        .btn-Bestfood-search{
+            background-color: white;
+            color: black;
+            width: 100px;
         }
-
-        .graph-container {
-            margin-top: 50px;
-        }
-
-        /* 그래프 스타일 추가 */
-        .bar {
-            fill: steelblue;
-        }
-
-        .bar:hover {
-            fill: orange;
-        }
-
-        .axis-label {
-            font-size: 14px;
-        }
-
-        /* 그래프 스타일 추가 */
-        .bar {
-            fill: steelblue;
-        }
-
-        .bar:hover {
-            fill: orange;
-        }
-
-        .axis-label {
-            font-size: 14px;
-        }
-
     </style>
 </head>
 <body>
@@ -108,18 +77,17 @@
             <li><div class="instaImg"><img src="../imgs/instagram.png " width="30" height="30"></div></li>
         </ul>
     </div>
-    <div class="container2">
-        <div class="row search-container">
+    <div class="container-Bestfood">
+        <div class="row foodSearch-container">
             <div class="col-md-6">
                 <div class="input-group">
                     <input type="text" class="form-control" id="search-input" placeholder="지역을 검색하세요">
-                    <div class="input-group-append">
-                        <button class="btn search-btn" type="button">검색</button>
+                    <div class="bestFood-search">
+                        <button class="btn-Bestfood-search" type="button">검색</button>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-4">
                 <div class="restaurant-card" id="restaurant1">
@@ -144,7 +112,7 @@
             </div>
         </div>
     </div>
-
+<!--    토글 버튼-->
     <div class="menu-toggle">&#9776;</div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script>
